--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <h1>購物車</h1>
                             <p>這個作品使用了原生 JavaScript 撰寫，搭配Local Storage可以在Client端儲存購物車的資料。
                             </p>
-                            <a class="learn-more" href="https://michaelchang0208.github.io/twitch-streams/"
+                            <a class="learn-more" href="https://michaelchang0208.github.io/Shopping-Cart/"
                                 target="_blank">Learn More</a>
                         </div>
 
@@ -146,7 +146,7 @@
 
                     </div>
                     <div class="img">
-                        <a href="https://michaelchang0208.github.io/twitch-streams/" target="_blank"><img
+                        <a href="https://comment-board-web.herokuapp.com/" target="_blank"><img
                                 src="comment-board.png" alt=""></a>
                     </div>
                 </div>
